<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.andelaintermediatemedmanager.LoginActivity"
    android:background="@color/blue_700">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_below="@id/app_title"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
        <TextView
            android:layout_below="@id/app_name"
            android:layout_marginTop="40dp"
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/signed_out"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sign_in_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_guide"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"
            android:visibility="visible"
            tools:visibility="gone"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="visible"
            tools:visibility="gone" />



    </LinearLayout>

</RelativeLayout>
